<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TheFighters">

    <TextView
        android:id="@+id/tvCadilhac"
        android:layout_width="175dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/johnny_description_fighter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toEndOf="@+id/ivCadilhac"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivCadilhac"
        android:layout_width="119dp"
        android:layout_height="103dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imagecadilhac"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cadilhac" />

    <ImageView
        android:id="@+id/ivConan"
        android:layout_width="119dp"
        android:layout_height="103dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="82dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCadilhac"
        app:srcCompat="@drawable/conan" />

    <ImageView
        android:id="@+id/ivGimli"
        android:layout_width="119dp"
        android:layout_height="103dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="82dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivConan"
        app:srcCompat="@drawable/gimli" />

    <Button
        android:id="@+id/btChooseCadilhac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/choose_johnny"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCadilhac" />

    <Button
        android:id="@+id/btChooseConan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/choose_conan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivConan" />

    <Button
        android:id="@+id/btChooseGimli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/choose_gimli"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivGimli" />

    <TextView
        android:id="@+id/DescriptionConan"
        android:layout_width="197dp"
        android:layout_height="94dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="16dp"
        android:text="@string/conan_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toEndOf="@+id/ivConan"
        app:layout_constraintTop_toBottomOf="@+id/tvCadilhac" />

    <TextView
        android:id="@+id/tvDescriptionGimli"
        android:layout_width="248dp"
        android:layout_height="91dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="8dp"
        android:text="@string/gimliDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/ivGimli"
        app:layout_constraintTop_toBottomOf="@+id/DescriptionConan" />

</android.support.constraint.ConstraintLayout>